objects/ssot__Occupation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdditionalInformationText__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeText__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalReferenceURL__c</fullName>
        <label>External Reference URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Occupation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NatureofWorkDescription__c</fullName>
        <label>Nature of Work</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OccupationGroupId__c</fullName>
        <label>Occupation Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OccupationStatus__c</fullName>
        <label>Occupation Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TitlingPolicyDescription__c</fullName>
        <label>Titling Policy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366662951_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Occupation_OccupationGroupId_map_Occ_rel</label>
        <referenceTo>ssot__OccupationGroup__dlm</referenceTo>
        <relationshipLabel>Occupation_OccupationGroupId_map_Occ_rel</relationshipLabel>
        <relationshipName>rel_1727366662951_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>